--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "An easy example for pm2 in Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "pm2 start --name server -i 4 index.js",
+    "stop": "pm2 delete server",
+    "show": "pm2 show server"
   },
   "keywords": [
     "Node.js",
     "pm2"
   ],
   "author": "Steve Lai",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2",
+    "loadtest": "^2.3.0",
+    "pm2": "^2.9.1"
+  }
 }
