--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "pm2 start --name server -i 4 index.js",
-    "stop": "pm2 delete server",
+    "del": "pm2 delete server",
     "show": "pm2 show server",
-    "log": "pm2 logs server",
-    "test": "node index.js"
+    "logs": "pm2 logs server",
+    "test": "loadtest -n 1000 -c 100 http://localhost:3000"
   },
   "keywords": [
     "Node.js",
